💄 (nav): Fix dark mode menu dropdown colors

--- a/_sass/dropdown.scss
+++ b/_sass/dropdown.scss
@@ -31,7 +31,8 @@ a.dropdown-trigger::after {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: $background-color;
+  color: $text-color;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -39,7 +40,6 @@ a.dropdown-trigger::after {
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: black;
   padding: 12px 16px;
   /* Undo margin of normal navigation links */ 
   margin: 0;
@@ -48,7 +48,7 @@ a.dropdown-trigger::after {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {background-color: $form-background-color;}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
